--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <span>
     <a routerLink="/">
-      MyMessages
+      MeanPostApp
     </a>
   </span>
   <span class="spacer"></span>
